{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 30,
  "lineage": "43b8ba0e-78fa-dff4-d062-9e9ba4e2e925",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107813131109:security-group/sg-01187c5ab75b2502d",
            "description": "Allow VPC traffic to communicate with AWS Services",
            "egress": [],
            "id": "sg-01187c5ab75b2502d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.78.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpc_endpoint_sg",
            "name_prefix": "",
            "owner_id": "107813131109",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a05985a1f76f5d46"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107813131109:route-table/rtb-003c21c927e9325ec",
            "default_route_table_id": "rtb-003c21c927e9325ec",
            "id": "rtb-003c21c927e9325ec",
            "owner_id": "107813131109",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "DefaultRouteTable": "true",
              "Environment": "qa",
              "Name": "bookstore-vpc-qa",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "tags_all": {
              "DefaultRouteTable": "true",
              "Environment": "qa",
              "Name": "bookstore-vpc-qa",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a05985a1f76f5d46"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fc52b7b3751aac2c",
            "domain": "vpc",
            "id": "eipalloc-0fc52b7b3751aac2c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-230-103-5.compute-1.amazonaws.com",
            "public_ip": "34.230.103.5",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "qa",
              "Name": "bookstore-vpc-qa-us-east-1a",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "tags_all": {
              "Environment": "qa",
              "Name": "bookstore-vpc-qa-us-east-1a",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107813131109:internet-gateway/igw-0c99d84ff9b15ce55",
            "id": "igw-0c99d84ff9b15ce55",
            "owner_id": "107813131109",
            "tags": {
              "Environment": "qa",
              "Name": "bookstore-vpc-qa",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "tags_all": {
              "Environment": "qa",
              "Name": "bookstore-vpc-qa",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "vpc_id": "vpc-0a05985a1f76f5d46"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fc52b7b3751aac2c",
            "connectivity_type": "public",
            "id": "nat-0cf3df0ce1cecd80e",
            "network_interface_id": "eni-0a828b119f56c594a",
            "private_ip": "10.78.23.25",
            "public_ip": "34.230.103.5",
            "subnet_id": "subnet-0b86b1e5060b08a65",
            "tags": {
              "Environment": "qa",
              "Name": "bookstore-vpc-qa-us-east-1a",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "tags_all": {
              "Environment": "qa",
              "Name": "bookstore-vpc-qa-us-east-1a",
              "Owner": "Hernandez",
              "Project": "bookstore"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06671345eeb8ecb1b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cf3df0ce1cecd80e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06671345eeb8ecb1b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c99d84ff9b15ce55",
            "id": "r-rtb-0a7202eff130977871080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a7202eff13097787",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107813131109:route-table/rtb-06671345eeb8ecb1b",
            "id": "rtb-06671345eeb8ecb1b",
            "owner_id": "107813131109",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "qa",
              "Name": "bookstore-vpc-qa-private",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "tags_all": {
              "Environment": "qa",
              "Name": "bookstore-vpc-qa-private",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a05985a1f76f5d46"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107813131109:route-table/rtb-0a7202eff13097787",
            "id": "rtb-0a7202eff13097787",
            "owner_id": "107813131109",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "qa",
              "Name": "bookstore-vpc-qa-public",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "tags_all": {
              "Environment": "qa",
              "Name": "bookstore-vpc-qa-public",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a05985a1f76f5d46"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5e90aaa071b1d3c",
            "route_table_id": "rtb-06671345eeb8ecb1b",
            "subnet_id": "subnet-04bd2739e7933954d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be2aad80bbcadab5",
            "route_table_id": "rtb-06671345eeb8ecb1b",
            "subnet_id": "subnet-09a5ea403ed7480cc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2dd929b8b5e35a7",
            "route_table_id": "rtb-06671345eeb8ecb1b",
            "subnet_id": "subnet-0154bfca41eda7814"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02be372888115732d",
            "route_table_id": "rtb-06671345eeb8ecb1b",
            "subnet_id": "subnet-0bc5b56c4ba4fc182"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c035cc0248d26f2b",
            "route_table_id": "rtb-06671345eeb8ecb1b",
            "subnet_id": "subnet-0f744f62a994fae25"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6e815158288a088",
            "route_table_id": "rtb-06671345eeb8ecb1b",
            "subnet_id": "subnet-084af5f5bd5c17baf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e2a154b6f97ee3c",
            "route_table_id": "rtb-0a7202eff13097787",
            "subnet_id": "subnet-0b86b1e5060b08a65"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f2bb693e178f82a",
            "route_table_id": "rtb-0a7202eff13097787",
            "subnet_id": "subnet-01d405bee00bb1faf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0224c0da597015223",
            "route_table_id": "rtb-0a7202eff13097787",
            "subnet_id": "subnet-03565ee40ebb20a44"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107813131109:subnet/subnet-04bd2739e7933954d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.78.29.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bd2739e7933954d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107813131109",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "qa",
              "Name": "bookstore-database-qa",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "tags_all": {
              "Environment": "qa",
              "Name": "bookstore-database-qa",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "vpc_id": "vpc-0a05985a1f76f5d46"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107813131109:subnet/subnet-09a5ea403ed7480cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.78.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a5ea403ed7480cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107813131109",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "qa",
              "Name": "bookstore-database-qa",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "tags_all": {
              "Environment": "qa",
              "Name": "bookstore-database-qa",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "vpc_id": "vpc-0a05985a1f76f5d46"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107813131109:subnet/subnet-0154bfca41eda7814",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.78.31.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0154bfca41eda7814",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107813131109",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "qa",
              "Name": "bookstore-database-qa",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "tags_all": {
              "Environment": "qa",
              "Name": "bookstore-database-qa",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "vpc_id": "vpc-0a05985a1f76f5d46"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107813131109:subnet/subnet-0bc5b56c4ba4fc182",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.78.26.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc5b56c4ba4fc182",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107813131109",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "qa",
              "Name": "bookstore-private-qa",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "tags_all": {
              "Environment": "qa",
              "Name": "bookstore-private-qa",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "vpc_id": "vpc-0a05985a1f76f5d46"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107813131109:subnet/subnet-0f744f62a994fae25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.78.27.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f744f62a994fae25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107813131109",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "qa",
              "Name": "bookstore-private-qa",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "tags_all": {
              "Environment": "qa",
              "Name": "bookstore-private-qa",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "vpc_id": "vpc-0a05985a1f76f5d46"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107813131109:subnet/subnet-084af5f5bd5c17baf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.78.28.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084af5f5bd5c17baf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107813131109",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "qa",
              "Name": "bookstore-private-qa",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "tags_all": {
              "Environment": "qa",
              "Name": "bookstore-private-qa",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "vpc_id": "vpc-0a05985a1f76f5d46"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107813131109:subnet/subnet-0b86b1e5060b08a65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.78.23.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b86b1e5060b08a65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "107813131109",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "qa",
              "Name": "bookstore-public-qa",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "tags_all": {
              "Environment": "qa",
              "Name": "bookstore-public-qa",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "vpc_id": "vpc-0a05985a1f76f5d46"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107813131109:subnet/subnet-01d405bee00bb1faf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.78.24.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d405bee00bb1faf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "107813131109",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "qa",
              "Name": "bookstore-public-qa",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "tags_all": {
              "Environment": "qa",
              "Name": "bookstore-public-qa",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "vpc_id": "vpc-0a05985a1f76f5d46"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107813131109:subnet/subnet-03565ee40ebb20a44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.78.25.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03565ee40ebb20a44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "107813131109",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "qa",
              "Name": "bookstore-public-qa",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "tags_all": {
              "Environment": "qa",
              "Name": "bookstore-public-qa",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "vpc_id": "vpc-0a05985a1f76f5d46"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107813131109:vpc/vpc-0a05985a1f76f5d46",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.78.0.0/16",
            "default_network_acl_id": "acl-07ac8b05ff2de03c5",
            "default_route_table_id": "rtb-003c21c927e9325ec",
            "default_security_group_id": "sg-0b28c6d9aad1cf4d0",
            "dhcp_options_id": "dopt-29d99252",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a05985a1f76f5d46",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-003c21c927e9325ec",
            "owner_id": "107813131109",
            "tags": {
              "Environment": "qa",
              "Name": "bookstore-vpc-qa",
              "Owner": "Hernandez",
              "Project": "bookstore"
            },
            "tags_all": {
              "Environment": "qa",
              "Name": "bookstore-vpc-qa",
              "Owner": "Hernandez",
              "Project": "bookstore"
            }
          }
        }
      ]
    }
  ]
}